k8s/node-k8-services.yml
apiVersion: v1
kind: Service
metadata:
  name: node-stress-service
spec:
  type: ClusterIP 
  selector:
    app: node-stress
  ports:
  - protocol: TCP
    port: 3030
    targetPort: 3000
