k8s/node-k8-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-stress-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-stress-service
            port:
              number: 3030
