k8s/node-k8.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-stress
  labels:
    app: node-stress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-stress
  template:
    metadata:
      labels:
        app: node-stress
    spec:
      containers:
      - name: node-stress
        image: maaasyn/licencjat:prod
        resources:
          limits:
            cpu: "500m"
            memory: "128Mi"
          requests:
            cpu: "250m"
            memory: "96Mi"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: node-stress-service
spec:
  type: ClusterIP 
  selector:
    app: node-stress
  ports:
  - protocol: TCP
    port: 3030
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-stress-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-stress-service
            port:
              number: 3030
